# scout-gh-test

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  eslint.config.cjs  hello_world_playbook.yml  intellij_tag_java.xml  linting_java_checkstyle.xml
.github/: CODEOWNERS  inventory.yaml  launch_temporal_extraction.sh  pull_request_template.md  temporal-java.values.yaml  temporal-python.values.yaml  test_config_template.json
.github/ci_resources/: inventory.yaml  launch_temporal_extraction.sh  test_config_template.json  tests-job.yaml
.github/workflows/: ansible-deploy.yaml  ci.yaml  test.yaml  test.yml
ansible/: .gitignore  Makefile  README.md  inventory.example.yaml
ansible/collections/: requirements.yaml
ansible/playbooks/: explorer.yaml  grafana.yaml  helm.yaml  jaeger.yaml  jupyter.yaml  k3s-agent.yaml  k3s-cluster.yaml  k3s.yaml  main.yaml  minio.yaml  orchestrator.yaml  prometheus.yaml  scout.yaml  traefik.yaml
docs/internal/: git-branching-and-trunk-based-development.md  integration_tests.md  monorepo-build-tools.md  precommit.md
explorer/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
explorer/src/: App.jsx
helm/jaeger/: README.md  (+3 more)
orchestration/: README.md
orchestration/temporal-python/: .dockerignore  Dockerfile  pyproject.toml
orchestration/temporal-python/src/temporalpy/: ingesthl7worker.py
orchestration/temporal-python/src/temporalpy/activities/: ingesthl7.py
orchestration/temporal-python/src/temporalpy/hl7extractor/: deltalake.py  hl7.py
tests/: build.gradle  uids.json
(+86 files in other folders)
